<resources>
    <string name="app_name">My Term Planner</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="delete">Delete</string>
    <string name="term_title">Term Title</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="wgu_c196">WGU C196</string>
    <string name="are_you_sure">Are you Sure?</string>
    <string name="course_title">Course Title</string>
    <string name="assessments">Assessments</string>
    <string name="courses">Courses</string>
    <string name="details">Details</string>
    <string name="notes">Notes</string>
    <string name="assessment_title">Assessment Title</string>
    <string name="term_editor">Term Editor</string>
    <string name="course_editor">Course Editor</string>
    <string name="assessment_editor">Assessment Editor</string>
    <string name="terms">Terms</string>
    <string name="upcoming_events">Upcoming Events</string>
    <string name="manage">Manage</string>
    <string name="past_events">Past Events</string>
    <string name="todays_events">Today\'s Events</string>
    <string name="phones">Phones</string>
    <string name="emails">Emails</string>
    <string name="first_name">First Name</string>
    <string name="middle_name">Middle Name</string>
    <string name="last_name">Last Name</string>
    <string name="prof_editor">Professor Editor</string>
    <string name="profs">Professors</string>
    <string name="phone_type">Phone type</string>
    <string name="phone_number">Phone Number</string>
    <string name="phone_editor">Phone Editor</string>
    <string name="email_editor">Email Editor</string>
    <string name="add_prof">Add Professor</string>
    <string name="do_delete">Do you want to delete this item?</string>
    <string name="create_prof">Create Professor</string>
    <string name="create_term">Create Term</string>
    <string name="user_prefs">User Preferences</string>
    <string name="upcoming_active_events">Active/Upcoming Events</string>
    <string name="active_future_events">Active/Future Events</string>
    <string name="deleted">Deleted</string>
    <string name="email_address">Email Address</string>
    <string name="email_type">Email Type</string>
    <string name="error_empty_email">Email can\'t be empty</string>
    <string name="error_empty_phone_num">Phone Number can\'t be empty</string>
    <string name="error_empty_first_name">First Name cannot be empty</string>
    <string name="error_empty_last_name">Last Name cannot be empty</string>
    <string name="delete_prof">Delete Professor</string>
    <string name="add_phone">Add Phone</string>
    <string name="add_email">Add Email</string>
    <string name="saved">Saved</string>
    <string name="error_empty_title">Title cannot be empty</string>
    <string name="create_assessment">Create Assessment</string>
    <string name="delete_assessment">Delete Assessment</string>
    <string name="add_reminder">Add Reminder</string>
    <string name="notification_date">Notification Date</string>
    <string name="custom_date">Custom Date</string>
    <string name="default_tab">Default Tab</string>
    <string name="user_prefs_note1">Note: Negative values will show past events</string>
    <string name="num_days">Number of Days</string>
    <string name="num_days_range">Range: -365 to 365</string>
    <string name="error_alarm_failed">Failed to create notification</string>
    <string name="reminder_header">Select Field and Time</string>
    <string name="about">About</string>
    <string name="error_alarm_before">Cannot set a notification for a date/time before now</string>
    <string name="create_course">New Course</string>
    <string name="delete_all_assessments">Delete All Assessments</string>
    <string name="delete_course">Delete Course</string>
    <string name="add_assessment">Add Assessment</string>
    <string name="error_delete_course">Cannot delete a course that has assessments</string>
    <string name="deleted_all_assessments">Deleted All Assessments</string>
    <string name="error_no_assessments">This course has no assessments</string>
    <string name="added_prof">Added Professor to course</string>
    <string name="deleted_prof">Deleted Professor from course</string>
    <string name="delete_all_corses">Delete All Courses</string>
    <string name="delete_term">Delete Term</string>
    <string name="add_course">Add Course</string>
    <string name="error_delete_term">Cannot delete a term that has courses</string>
    <string name="deleted_all_courses">Deleted All Courses</string>
    <string name="error_no_courses">This term has no courses</string>
</resources>
