<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:padding="4dp">

    <TextView
        android:id="@+id/defTabText"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_below="@+id/numDays"
        android:layout_toLeftOf="@+id/numDays"
        android:layout_toStartOf="@+id/numDays"
        android:gravity="center_vertical|start"
        android:text="@string/default_tab" />

    <TextView
        android:id="@+id/prefNotes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/defTabText"
        android:layout_marginTop="17dp"
        android:gravity="center"
        android:text="@string/user_prefs_note1" />

    <TextView
        android:id="@+id/daysText"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_alignBottom="@+id/numDays"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/numDays"
        android:layout_marginStart="35dp"
        android:layout_marginLeft="35dp"
        android:gravity="center_vertical|start"
        android:text="@string/num_days" />

    <TextView
        android:id="@+id/prefsRange"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/prefNotes"
        android:gravity="center"
        android:text="@string/num_days_range" />

    <EditText
        android:id="@+id/numDays"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_toEndOf="@+id/daysText"
        android:layout_toRightOf="@+id/daysText"
        android:ems="10"
        android:inputType="numberSigned"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"/>

    <Spinner
        android:id="@+id/tabDropDown"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_alignTop="@+id/defTabText"
        android:layout_toEndOf="@+id/defTabText"
        android:layout_toRightOf="@+id/defTabText"
        android:background="@android:drawable/editbox_dropdown_light_frame" />
</RelativeLayout>