<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.proj.abhi.mytermplanner.activities.TermActivity">

    <TabHost
        android:id="@+id/tabHost"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TabWidget
                android:id="@android:id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:tag="tab0"
                    android:text="@string/details" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:tag="tab0"
                    android:text="@string/courses" />

            </TabWidget>

            <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.v4.widget.NestedScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fillViewport="true">

                    <LinearLayout
                        android:id="@+id/details"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <EditText
                            android:id="@+id/termTitle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="16dp"
                            android:ems="10"
                            android:hint="@string/term_title"
                            android:inputType="textPersonName"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.512"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            android:paddingLeft="10dp"
                            android:paddingRight="10dp"/>

                        <EditText
                            android:id="@+id/startDate"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:hint="@string/start_date"
                            android:inputType="date"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.512"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/termTitle"
                            android:paddingLeft="10dp"
                            android:paddingRight="10dp"/>

                        <EditText
                            android:id="@+id/endDate"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:hint="@string/end_date"
                            android:inputType="date"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.512"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/startDate"
                            android:paddingLeft="10dp"
                            android:paddingRight="10dp"/>
                    </LinearLayout>
                </android.support.v4.widget.NestedScrollView>

                <LinearLayout
                    android:id="@+id/courses"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ListView
                        android:id="@+id/courseList"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:drawable/editbox_dropdown_light_frame"
                        android:footerDividersEnabled="true"
                        android:headerDividersEnabled="true"
                        android:scrollbars="vertical"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.505"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintVertical_bias="1.0"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:smoothScrollbar="true">

                    </ListView>
                </LinearLayout>

            </FrameLayout>

        </LinearLayout>
    </TabHost>

</RelativeLayout>
