<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.proj.abhi.mytermplanner.activities.HomeActivity">

    <TabHost
        android:id="@+id/tabHost"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TabWidget
                android:id="@android:id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:tag="tab0"
                    android:text="@string/terms" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:tag="tab0"
                    android:text="@string/courses" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:tag="tab0"
                    android:text="@string/assessments" />

            </TabWidget>

            <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/terms"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ListView
                        android:id="@+id/termList"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@android:drawable/editbox_dropdown_light_frame"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:footerDividersEnabled="true"
                        android:headerDividersEnabled="true"
                        android:scrollbars="vertical"
                        android:smoothScrollbar="true"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.505"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintVertical_bias="1.0">

                    </ListView>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/courses"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ListView
                        android:id="@+id/courseList"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:drawable/editbox_dropdown_light_frame"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:footerDividersEnabled="true"
                        android:headerDividersEnabled="true"
                        android:scrollbars="vertical"
                        android:smoothScrollbar="true"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.505"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintVertical_bias="1.0">

                    </ListView>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/assessments"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ListView
                        android:id="@+id/assessmentList"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:drawable/editbox_dropdown_light_frame"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:footerDividersEnabled="true"
                        android:headerDividersEnabled="true"
                        android:scrollbars="vertical"
                        android:smoothScrollbar="true"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.505"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintVertical_bias="1.0">

                    </ListView>
                </LinearLayout>

            </FrameLayout>

        </LinearLayout>
    </TabHost>

</RelativeLayout>
